--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,11 @@ vignettes/*.pdf
 
 # data
 *.csv
+*.xlsx
 
-# screenshot folder
+# documentation
+*.pdf
+
+# folders
 screenshots/
+example_files/
